# duckdb-mysql

./: .gitmodules  CMakeLists.txt  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  MysqlTests.yml
benchmarks/: federation_speed_benchmark.sql  run_speed_benchmark.sh
src/: CMakeLists.txt  mysql_connection.cpp  mysql_connection_pool.cpp  mysql_execute.cpp  mysql_extension.cpp  mysql_field.cpp  mysql_filter_pushdown.cpp  mysql_parameter.cpp  mysql_result.cpp  mysql_scanner.cpp  mysql_sql_writer.cpp  mysql_storage.cpp  mysql_types.cpp  mysql_utils.cpp
src/dbconnector/: CMakeLists.txt
src/include/: generic_connection_pool.hpp  mysql_connection.hpp  mysql_connection_pool.hpp  mysql_field.hpp  mysql_filter_pushdown.hpp  mysql_parameter.hpp  mysql_result.hpp  mysql_scanner.hpp  mysql_scanner_extension.hpp  mysql_sql_writer.hpp  mysql_statement.hpp  mysql_types.hpp  mysql_utils.hpp  mysql_version.h  network_calibration.hpp
src/storage/: CMakeLists.txt  mysql_catalog.cpp  mysql_catalog_set.cpp  mysql_clear_cache.cpp  mysql_debug_execution_plan.cpp  mysql_execute_query.cpp  mysql_index.cpp  mysql_index_entry.cpp  mysql_index_set.cpp  mysql_insert.cpp  mysql_optimizer.cpp  mysql_predicate_analyzer.cpp  mysql_result.cpp  mysql_schema_entry.cpp  mysql_schema_set.cpp  mysql_statistics.cpp  mysql_table_entry.cpp  mysql_table_set.cpp  mysql_transaction.cpp  mysql_transaction_manager.cpp
test/: test_data.sql
test/sql/: adaptive_execution.test  attach_aggregate_pushdown.test  attach_aggregates.test  attach_alter.test  (+76 more)
(+88 files in other folders)
